--- a/web/htdocs/css/rankings.css
+++ b/web/htdocs/css/rankings.css
@@ -20,7 +20,7 @@
   letter-spacing: 0 !important;
   font-weight: 400 !important;
   white-space: normal;
-  font-family: "PokeCrystalInline", "PokeCrystal", monospace !important;
+  font-family: "PokeCrystal", monospace !important;
 }
 
 .trainer-rankings-control-row {
